--- a/Threading/Threading/mainwindow.ui
+++ b/Threading/Threading/mainwindow.ui
@@ -115,7 +115,7 @@
       <x>10</x>
       <y>80</y>
       <width>311</width>
-      <height>161</height>
+      <height>171</height>
      </rect>
     </property>
     <property name="title">
@@ -190,7 +190,7 @@
      <property name="geometry">
       <rect>
        <x>130</x>
-       <y>120</y>
+       <y>100</y>
        <width>160</width>
        <height>16</height>
       </rect>
@@ -214,8 +214,8 @@
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
-       <x>20</x>
-       <y>120</y>
+       <x>10</x>
+       <y>100</y>
        <width>101</width>
        <height>16</height>
       </rect>
@@ -223,6 +223,82 @@
      <property name="text">
       <string>Интервал посылки</string>
      </property>
+    </widget>
+    <widget class="QLabel" name="label_4">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>130</y>
+       <width>101</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Звуковой сигнал</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="checkBox">
+     <property name="geometry">
+      <rect>
+       <x>130</x>
+       <y>130</y>
+       <width>71</width>
+       <height>18</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="comboBox_2">
+     <property name="geometry">
+      <rect>
+       <x>190</x>
+       <y>130</y>
+       <width>101</width>
+       <height>22</height>
+      </rect>
+     </property>
+     <item>
+      <property name="text">
+       <string>Тип 1</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Тип 2</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Тип 3</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Тип 4</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Тип 5</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Тип 6</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Тип 7</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Тип 8</string>
+      </property>
+     </item>
     </widget>
    </widget>
   </widget>
